--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 </head>
 <body
 <h1>Artifact Optimization</h1>
-<p>DPS characters need ATK% Sands and a good balance of Crit Rate to Crit DMG. Having a 1:2 ratio is the norm, but if you have consistent crits you can go for higher crit dmg. Healers need HP%, and shield characters need whatever their shield scales off of. If your supports don't keep their Q's up all the time, go for ER% on sands. Make sure your goblet has the elemental/physical dmg bonus for the character it is equipped to. Circlet should provide whatever crit state is missing. Flower and Plume can be tailored to your liking, but make sure you are getting a good amount of crit stats.
+<p>DPS characters need ATK% Sands and a good balance of Crit Rate to Crit DMG. Having a 1:2 ratio is the norm, but if you have consistent crits you can go for higher crit dmg. Healers need HP%, and shield characters need whatever their shield scales off of. If your supports don't keep their Q's up all the time, go for ER% on sands. Make sure your goblet has the elemental/physical dmg bonus for the character it is equipped to. Circlet should provide whatever crit state is missing. Flower and Plume can be tailored to your liking, but make sure you are getting a good amount of crit stats.</p>
 <br>
       <button onclick="window.location.href='https://www.youtube.com/channel/UCFjCoYQi5QzOGP2lzcFulpQ';">
       Shameless Plug
